# AgentJet

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  README.md  ajet_tinkerscript.md  ajet_tinkerscript.py  ajet_tinkerscript_threading.py  boot_sms.py  config_manifest.md  config_manifest_v2.md  eval_checkpoints.py  genindex.html  index.html  install.sh  launcher.py  launcher_trinity.py  math1.yaml  mini_test.py  mkdocs.yml  objects.inv  old_readme.md  pyproject.toml  pyrightconfig.json  requirements_trinity.txt  requirements_verl.txt  rollout.py  rollout_eval.py  search.html  searchindex.js  setup.py  sitemap.xml  std_req.txt  test_data_generator.yaml  test_launcher.py  tinkerscript.md  tinkerscript_1.md  vsdb.py
.github/workflows/: doc.yaml  docker.yaml  pre-commit.yaml  unittest.yaml
_templates/: language-switch.html
agentopia/: agent_flow.py  agentscope_flow.py  agentscope_flow_example.py  agentscope_protocol.py  env.py  main_trinity.py  main_verl.py  main_vllm.py  parallel_env.py  trinity_compat_env.py
agentopia/backbone_trinity/: __init__.py  register_flow.py
agentopia/backbone_verl/: trainer.py
agentopia/client/: em_client.py  env_client_ng.py
agentopia/context_manager/: cmt_agentscope.py  cmt_base_attr.py  cmt_context_aware.py  cmt_context_clip.py  cmt_foreign_llm.py  cmt_linear.py  cmt_linear_think.py  cmt_phantom_hint.py  cmt_sliding_window.py
agentopia/default_config/: agentopia_default.yaml  config_auto_convertion_verl.json  default.yaml  trinity_default.yaml
agentopia/schema/: task.py  trajectory.py
agentopia/task_reader/: task_reader_base.py
agentopia/utils/: markdown_parser.py  process_dataset.py  pty.py  smart_daemon.py  vscode_breakpoint.py
agentscope_tuner/: __init__.py  tuner.py  tuner_v2.md  tuner_v2.py  workflow.py
agentscope_tuner/backbone/: __init__.py  main_trinity.py  main_verl.py  main_vllm.py  trainer_trinity.py  trainer_verl.py  warm_up.py
agentscope_tuner/cli/: job.py  launcher.py
agentscope_tuner/context_tracker/: base_tracker.py  basic_tracker.py
agentscope_tuner/data_generator/: base_data_generator.py  knowledge_augmentation.py  task_augmentation.py
agentscope_tuner/default_config/: astune_default.py  astune_default.yaml
agentscope_tuner/schema/: extended_msg.py
agentscope_tuner/task_judge/: base_judge.py  env_service_as_judge.py  rm_auto_grader_judge.py
agentscope_tuner/task_reader/: __init__.py  data_generator_reader.py  env_service_reader.py  hf_dataset_reader.py  jsonl_reader.py  task_reader_base.py
agentscope_tuner/task_rollout/: async_llm_bridge.py  native_parallel_worker.py  resource_keeper.py  single_worker.py
agentscope_tuner/task_runner/: agentscope_runner.py  base_runner.py
agentscope_tuner/utils/: async_utils.py  cleaner.py  color_hsl.py  config_computer.py  config_utils.py  core_env_vars.py  launch_utils.py  pty.py  retry.py  sample.py  smart_daemon.py  testing_utils.py  tokenizer.py
ajet/: __init__.py  launcher.py  tuner.py  tuner_deprecated.py  tuner_v2.md  tuner_v2.py  workflow.py
ajet/backbone/: __init__.py  main_trinity.py  main_verl.py  main_vllm.py  trainer_trinity.py  trainer_verl.py  warm_up.py
ajet/cli/: job.py  launcher.py
ajet/context_tracker/: base_tracker.py  basic_tracker.py  multiagent_tracking.py
ajet/copilot/: job.py
ajet/data_generator/: base_data_generator.py  config.py  knowledge_augmentation.py  task_augmentation.py
ajet/default_config/: ajet_default.py  ajet_default.yaml  ajet_ts_default.yaml  astune_default.py  astune_default.yaml
ajet/schema/: convertion.py  document.py  extended_msg.py  logprob.py  task.py  (+1 more)
astune/: __init__.py  agent_flow.py  agentscope_flow.py  agentscope_protocol.py  env.py  main_trinity.py  main_verl.py  main_vllm.py  parallel_env.py  tuner.py  workflow.py
astune_tests/: test_tracing.py  test_tracing_reader.py  testing_rubrics.py
astuner/: __init__.py  main_trinity.py  main_verl.py  main_vllm.py  tuner.py  workflow.py
docs/: _config.yml  _toc.yml  build.sh  index.md  requirements.txt
documents/: backbones.md  tokenizer_nodes.md  vllm_tokenizer.py
en/: beast_logger.html  configuration.html  data_generation.html  data_pipeline.html  example.md  example_app_world.html  example_app_world.md  example_countdown.html  example_countdown.md  example_frozenlake.html  example_learning_to_ask.html  example_math_agent.html  example_tracing_feedback_loop.html  example_tracing_feedback_loop.md  example_werewolves.html  example_werewolves.md  hardware_related_solution.md  installation.html  installation.md  intro.html  introduction.html  quickstart.html  support_http.md  support_oaisdk.md  task_judger.html  tune_your_first_agent.html  visualization.html  visualization.md  workflow.html  workflow.md
scripts/: converter_hf_to_mcore.py  deploy_model.py  diagnose.py  display_dataset.py  download_dataset.py  download_model.py  model_merger.py  requirements_trinity.txt  requirements_verl.txt  tar_and_copy.sh  test_dashscope_api.py  untar.sh
search/: search_index.json
stylesheets/: feature-cards.css  tuner_v2.md
tests/: config_test.py  data_gen.py  data_gen.yaml  test_benchmark_report.py  test_compute_madness.py  test_dynamic_import.py  test_launcher_appworld.py  test_networking.py  test_tracing.py  test_tracing_reader.py
tutorial/: README.md  appworld.md  appworld.py  math_agent.md  math_agent.py
zh/: beast_logger.html  configuration.html  data_generation.html  data_pipeline.html  example_app_world.html  example_countdown.html  example_frozenlake.html  example_learning_to_ask.html  example_math_agent.html  example_tracing_feedback_loop.html  example_werewolves.html  installation.html  intro.html  quickstart.html  task_judger.html  tune_your_first_agent.html  visualization.html  workflow.html
(+557 files in other folders)
